--- a/Boost/CMakeLists.txt
+++ b/Boost/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-#set(CMAKE_PREFIX_PATH "/opt/boost/install")
+set(CMAKE_PREFIX_PATH "/opt/boost/install")
 set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_STATIC_RUNTIME OFF)
